// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hide /> should hide it's children according to screen size 1`] = `
@media (max-width:calc(600px - 1px)) {
  .Hide-module__hide-xsmall___CSbWx {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-xsmall___CSbWx"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 2`] = `
@media (min-width:600px) and (max-width:calc(1024px - 1px)) {
  .Hide-module__hide-small___4sGBt {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-small___4sGBt"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 3`] = `
@media (min-width:1024px) and (max-width:calc(1440px - 1px)) {
  .Hide-module__hide-medium___2Ovgf {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-medium___2Ovgf"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 4`] = `
@media (min-width:1440px) {
  .Hide-module__hide-large___X3Usc {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-large___X3Usc"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 5`] = `
@media (min-width:600px) and (max-width:calc(1024px - 1px)) {
  .Hide-module__hide-small___4sGBt {
    display: none!important;
  }
}

@media (min-width:1440px) {
  .Hide-module__hide-large___X3Usc {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-small___4sGBt Hide-module__hide-large___X3Usc"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 6`] = `
@media (max-width:calc(600px - 1px)) {
  .Hide-module__hide-xsmall___CSbWx {
    display: none!important;
  }
}

@media (min-width:1024px) and (max-width:calc(1440px - 1px)) {
  .Hide-module__hide-medium___2Ovgf {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-xsmall___CSbWx Hide-module__hide-medium___2Ovgf"
>
  Content
</div>
`;

exports[`<Hide /> should hide it's children according to screen size 7`] = `
@media (min-width:600px) and (max-width:calc(1024px - 1px)) {
  .Hide-module__hide-small___4sGBt {
    display: none!important;
  }
}

@media (min-width:1024px) and (max-width:calc(1440px - 1px)) {
  .Hide-module__hide-medium___2Ovgf {
    display: none!important;
  }
}

@media (min-width:1440px) {
  .Hide-module__hide-large___X3Usc {
    display: none!important;
  }
}

<div
  class="Hide-module__hide-small___4sGBt Hide-module__hide-medium___2Ovgf Hide-module__hide-large___X3Usc"
>
  Content
</div>
`;
